# sost-core

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  FOUNDATION_COMMITMENTS.md  LICENSE  MINING.md  NeoB.md  QUICKSTART.md  QUICKSTART_2.md  README.md  SECURITY.md  SOST_MASTER_PLAN.md  TRINITY_CAMPAIGN_ENGINE.md  TRINITY_CAMPAIGN_kalgoorlie_phase1.json  TRINITY_CAMPAIGN_kalgoorlie_phase1.md  TRINITY_DEMO_DOSSIER_kalgoorlie.json  TRINITY_DEMO_DOSSIER_kalgoorlie.md  TRINITY_GEO_CAMPAIGN_global_phase1.json  TRINITY_GEO_CAMPAIGN_global_phase1.md  TRINITY_GEO_CANDIDATE_AOIS_global_phase1.json  TRINITY_GEO_CANDIDATE_AOIS_global_phase1.md  TRINITY_GEO_DOSSIER_global_phase1.json  TRINITY_GEO_DOSSIER_global_phase1.md  TRINITY_GEO_FILTER_global_phase1.json  TRINITY_GEO_FILTER_global_phase1.md  TRINITY_GEO_PROOF_BUNDLE_global_phase1.json  TRINITY_GEO_PROOF_BUNDLE_global_phase1.md  TRINITY_GEO_SCORECARD_global_phase1.json  TRINITY_GEO_SCORECARD_global_phase1.md  TRINITY_GEO_USEFUL_COMPUTE_PLAN_global_phase1.json  TRINITY_GEO_USEFUL_COMPUTE_PLAN_global_phase1.md  TRINITY_MATERIALS_CAMPAIGN_novel_frontier_phase1.json  TRINITY_MATERIALS_CAMPAIGN_novel_frontier_phase1.md  TRINITY_MATERIALS_CAMPAIGN_oxide_frontier_v01.json  TRINITY_MATERIALS_CAMPAIGN_oxide_frontier_v01.md  TRINITY_MATERIALS_CAMPAIGN_oxide_frontier_v02.json  TRINITY_MATERIALS_CAMPAIGN_oxide_frontier_v02.md  TRINITY_MATERIALS_CANDIDATES_oxide_frontier.json  (+57 more)
audit_public_repo_20260405_132802/: 00_summary.txt  10_sensitive_filenames.txt  20_current_tree_secret_hits.txt  30_large_files.txt  40_history_hits.txt  99_index.txt
auth/: __init__.py  auth.env.example  auth_config.py  gateway.py  otp.py  password.py  server.py  sessions.py  setup_admin.py  test_auth.py
config/: popc_checker_example.json  popc_pricing.json  trinity_autonomy_governor.example.json  trinity_governor_watchdog.example.json  trinity_worker_onboarding.example.json  v13_activation.json  v13_binary_preflight.json  v13_release_candidate.json
contracts/: .env.example  INTERNAL_REVIEW.md  README.md  SECURITY.md  SOSTEscrow.sol  foundry.toml
data/: popc_registry.json
deploy/: DOMAIN_MATRIX.md  auto_backup.sh  deploy-auth.sh  diagnose-domains.sh  fix-dual-domain.sh  health_check.sh  log_rotate.sh  monitor.sh  nginx-auth.conf  nginx-materials-api.conf  nginx_redirect_sostprotocol.conf  nginx_rpc_public.conf  nginx_rpc_ratelimit.conf  node-status.sh  setup_cron.sh  sost-auth.service  sost-explorer.nginx  sost-miner.service  sost-node.service  update_checkpoint.sh  vps-setup.sh
docs/: ACCESS_SECURITY_AUDIT.md  AI_COPILOT_SCOPE_AND_LIMITS.md  ANNOUNCEMENT_MINER_UPDATE_POLICY_FIX.md  ATOMIC_SWAP_CLI_GUIDE.md  ATOMIC_SWAP_FOUNDER_TEST_GUIDE.md  ATOMIC_SWAP_V14_7_MINER_DISCLOSURE.md  ATOMIC_SWAP_V14_MINER_DISCLOSURE.md  ATOMIC_SWAP_V14_OPERATIONS.md  AUTONOMY_ROADMAP.md  AUTONOMY_STATUS_CHECK.md  BEACON_CUSTODY_STATUS.md  BEACON_KEYGEN_RUNBOOK.md  BIOMETRIC_AUTH_FLOW.md  BROWSER_CRYPTO_FEASIBILITY.md  BTCTALK_REPLY_V14_NETWORK.md  CONSENSUS_FEATURE_AUDIT.md  CONSTITUTIONAL_ADDRESSES_AUDIT.md  CONVERGENCEX_CASERT_AUDIT.md  DEX_PRODUCT_READINESS_CHECKLIST.md  DTD_EMERGENCY_PAUSE_RESUME_DESIGN.md  EMERGENCY_RESPONSE_PLAN.md  EXCHANGE_NATIVE_INTEGRATION.md  FEATURE_AUDIT_2026_03.md  FORK_MECHANISM_AND_FUTURE_CONSENSUS.md  FOUNDER_SEED_RESERVE_AND_FORGE_PAYMENT.md  GEASPIRIT_ACCESS_RESTRICTIONS.md  GEASPIRIT_CANONICAL_PATH.md  GEASPIRIT_CTO_NEXT_PHASE.md  GEASPIRIT_CTO_SPRINT2_REPORT.md  GEASPIRIT_CTO_SPRINT_REPORT.md  GEASPIRIT_FREE_DATA_ACCESS_MAP_V1.json  GEASPIRIT_FREE_DATA_ACCESS_MAP_V1.md  GEASPIRIT_FRONTIER_RESEARCH_NOTE.md  GEASPIRIT_FRONTIER_RESEARCH_V5.md  GEASPIRIT_FULL_STATUS_REPORT.md  GEASPIRIT_GLOBAL_TRIAD_PUBLIC_NOTE.md  GEASPIRIT_INTUITION_TO_MEASURABLE_MAP_V1.json  GEASPIRIT_INTUITION_TO_MEASURABLE_MAP_V1.md  GEASPIRIT_MASTER_STATE.md  GEASPIRIT_MURCIA_AOI_PUBLIC_NOTE.md  (+219 more)
geaspirit/: README.md  setup_geaspirit.py
geaspirit_p9/: log.jsonl  memory.json
geaspirit_research/: memory.json  research_log.jsonl
geaspirit_research_v2/: research_log.jsonl  summary.json
marketing/: SOST_AGGREGATOR_LISTINGS.md  geaspirit_social.md
materials-engine/: README.md  config.yaml  requirements.txt
ops/: sost-rpc-proxy.py  sost-rpc-proxy.service
outputs/: fast_block_investigation_6200_6310.csv
reports/: burst_phase_results.csv  burst_phase_validation.md  burst_replay_5058_5066.md  burst_replay_results.csv  casert_dual_audit.json  casert_dual_audit.md  casert_joint_behavior.csv  casert_joint_behavior.md  casert_joint_topline.md  casert_shock_suite.csv  casert_shock_suite.md  e_profile_regression.csv  e_profile_regression.json  e_profile_regression.md  miner_scaling_report.md  miner_scaling_results.csv  miner_scaling_results.json  pid_tuning_campaign.md  pid_tuning_pareto.csv  pid_tuning_results.csv  pid_tuning_top10.md  simulator_parity_report.json  simulator_parity_report.md  slew_prefork_topline.md  slew_prefork_validation.csv  slew_prefork_validation.md
scripts/: analyze_casert_performance.py  analyze_mode_arbiter_data.py  antistall_sweep.py  antistall_sweep_results.csv  arbiter_data_collector.py  audit_miner_concentration.py  beacon-keygen.sh  beacon-sign.sh  beacon-vendor-fetch.sh  beacon-verify.sh  bitsq_tuning_sim.py  burst_phase_validation.py  burst_replay_5058_5066.py  casert_joint_behavior.py  casert_refiner.py  casert_shock_suite.py  casert_v6_full_sim.py  check_crypto_claims.py  check_dashboard_separation.sh  check_whitepaper_sync.py  collect_mode_arbiter_data.py  collect_unified_controller_data.py  conservative_30_profile_table.txt  decrypt_secrets.sh  e_profile_regression.py  encrypt_secrets.sh  gold_vault_governance_dry_run.py  import_public_help_pack.py  install_popc_cron.sh  license_create.py  license_verify.py  lottery_audit.py  miner_scaling_sweep.py  otc_rehearsal_btc_regtest.sh  otc_rehearsal_evm_anvil.sh  otc_rehearsal_sost_local.sh  pid_tuning_campaign.py  popc_auto_distribute.sh  popc_contracts.json  popc_daemon.py  (+36 more)
sost-v0.4.1-linux-x86_64/: genesis_block.json  sost-cli  sost-miner  sost-node
src/: address.cpp  node.cpp  (+53 more)
(+1525 files in other folders)
